tests/grammar/schema/inherit/cycle_inherit_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:1:8
  |
1 | schema Parent(Son):
  |        ^ There is a circular reference between schemas Parent, Son
  |

error[E2L23]: CompileError
 --> ${CWD}/main.k:4:8
  |
4 | schema Son(Parent):
  |        ^ There is a circular reference between schemas Parent, Son
  |